--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <div class="todo-section">
-        <h1>Nur's Todo List</h1>
+        <h1>Rayhan's Todo List</h1>
 
         <form>
             <input type="text" class="todo-input">
